--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,22 +100,36 @@ jobs:
                      npm test
 
 
-#  scan-frontend:
-#    docker:
-#      # Docker image here
-#    steps:
-#      # Checkout code from git
-#      # Restore from cache
-#      # Your job code here
-#
-#  scan-backend:
-#    docker:
-#      # Docker image here
-#    steps:
-#      # Checkout code from git
-#      # Restore from cache
-#      # Your job code here
-#
+  scan-frontend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+        - checkout
+        -   restore_cache:
+                keys: [ front-build ]
+        -   run:
+                name: Front-end scan
+                command: |
+                    # Your code here
+                     cd frontend
+                     npm install
+                     npm audit --audit-level-critical
+
+  scan-backend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+        - checkout
+        -   restore_cache:
+                keys: [ backend-build ]
+        -   run:
+                name: Backend-end scan
+                command: |
+                    # Your code here
+                     cd backend
+                     npm install
+                     npm audit --audit-level-critical
+
 #  deploy-infrastructure:
 #    docker:
 #      # Docker image here that supports AWS CLI
@@ -291,10 +305,10 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-#      - scan-backend:
-#          requires: [build-backend]
-#      - scan-frontend:
-#          requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
 #      - deploy-infrastructure:
 #          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
 #          filters:
