fix backend unit test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,6 +114,7 @@ jobs:
                      cd frontend
                      npm install
                      npm audit fix --force --audit-level-critical
+                     npm audit fix --force --audit-level-critical
                      npm audit --audit-level-critical
 
   scan-backend:
@@ -129,6 +130,7 @@ jobs:
                     # Your code here
                      cd backend
                      npm install
+                     npm audit fix --force --audit-level-critical
                      npm audit fix --force --audit-level-critical
                      npm audit fix --force --audit-level-critical
                      npm audit --audit-level-critical
