--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,8 +113,7 @@ jobs:
                     # Your code here
                      cd frontend
                      npm install
-                     npm audit fix --force --audit-level-critical
-                     npm audit fix --force --audit-level-critical
+                     npm audit fix --force --audit-level=critical
                      npm audit --audit-level-critical
 
   scan-backend:
@@ -130,9 +129,8 @@ jobs:
                     # Your code here
                      cd backend
                      npm install
-                     npm audit fix --force --audit-level-critical
-                     npm audit fix --force --audit-level-critical
-                     npm audit fix --force --audit-level-critical
+                     npm audit fix --force --audit-level=critical
+                     npm audit fix --force --audit-level=critical
                      npm audit --audit-level-critical
 
 #  deploy-infrastructure:
