--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,25 @@ commands:
                  event: fail
                  channel: test
                  template: basic_fail_1
-
+    install_awscli:
+        description: Install AWSCLI V2
+        steps:
+            - run:
+                name: Install aws cli
+                command: |
+                    curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+                    unzip awscliv2.zip
+                    sudo ./aws/install
+    install_ansible:
+        description: Install Ansible V2
+        steps:
+            - run:
+                name: Install Ansible cli
+                command: |
+                    sudo apt update
+                    sudo apt install software-properties-common
+                    sudo add-apt-repository --yes --update ppa:ansible/ansible
+                    sudo apt install ansible
 #  destroy-environment:
 #    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
 #    parameters:
@@ -151,40 +169,46 @@ jobs:
                   event: pass
                   channel: test
                   template: success_tagged_deploy_1
-#  deploy-infrastructure:
-#    docker:
-#      # Docker image here that supports AWS CLI
-#    steps:
-#      # Checkout code from git
-#      - run:
-#          name: Ensure back-end infrastructure exists
-#          command: |
-#            aws cloudformation deploy \
-#              --template-file .circleci/files/backend.yml \
-#              #--tags project=your-tag \
-#              # --stack-name "your back-end stack name with workflow id" \
-#              # --parameter-overrides ID="your workflow id"
-#              exit 1
-#      - run:
-#          name: Ensure front-end infrastructure exist
-#          command: |
-#            aws cloudformation deploy \
-#              --template-file .circleci/files/frontend.yml \
-#              #--tags project=your-tag \
-#              # --stack-name "your front-end stack name with workflow id" \
-#              # --parameter-overrides ID="your workflow id"
-#              exit 1
-#      - run:
-#          name: Add back-end ip to ansible inventory
-#          command: |
-#            # Your code here
-#            exit 1
-#      - persist_to_workspace:
-#          root: ~/
-#          paths:
-#            - project/.circleci/ansible/inventory.txt
-#      # Here's where you will add some code to rollback on failure
-#
+  deploy-infrastructure:
+      docker:
+          - image: cimg/base:stable
+      steps:
+          - checkout
+          - install_awscli
+          - run:
+                name: Ensure back-end infrastructure exists
+                command: |
+                    aws cloudformation deploy \
+                      --template-file .circleci/files/backend.yml \
+                      --tags project=udapeople \
+                      --stack-name "udapeople-back-end-${CIRCLE_WORKFLOW_ID:0:7}" \
+                      --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+
+          - run:
+              name: Ensure front-end infrastructure exist
+              command: |
+                aws cloudformation deploy \
+                  --template-file .circleci/files/frontend.yml \
+                  --tags project=udapeople \
+                  --stack-name "udapeople-front-end-${CIRCLE_WORKFLOW_ID:0:7}" \
+                  --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+
+          - run:
+              name: Add back-end ip to ansible inventory
+              command: |
+                BACKEND_PUBLIC_IP=$(aws ec2 describe-instancs \
+                  --filters "Name=tag:NAme,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                  --query 'Reservations[*].Instances[*].PublicIpAdress' \
+                  --output text)
+                echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
+                cat .circleci/ansible/inventory.txt
+
+          - persist_to_workspace:
+              root: ~/
+              paths:
+                - project/.circleci/ansible/inventory.txt
+      # Here's where you will add some code to rollback on failure
+
 #  configure-infrastructure:
 #    docker:
 #      # Docker image here that supports Ansible
@@ -337,11 +361,11 @@ workflows:
                   - test-backend
                   - scan-frontend
                   - scan-backend
-#      - deploy-infrastructure:
-#          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-#          filters:
-#            branches:
-#              only: [test-feature-branch]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
 #      - configure-infrastructure:
 #          requires: [deploy-infrastructure]
 #      - run-migrations:
