--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,9 +196,9 @@ jobs:
           - run:
               name: Add back-end ip to ansible inventory
               command: |
-                BACKEND_PUBLIC_IP=$(aws ec2 describe-instancs \
-                  --filters "Name=tag:NAme,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-                  --query 'Reservations[*].Instances[*].PublicIpAdress' \
+                BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+                  --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                  --query 'Reservations[*].Instances[*].PublicIpAddress' \
                   --output text)
                 echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
                 cat .circleci/ansible/inventory.txt
@@ -361,6 +361,7 @@ workflows:
                   - test-backend
                   - scan-frontend
                   - scan-backend
+                  - deploy-infrastructure
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
