--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,17 +29,21 @@ commands:
                     sudo apt install software-properties-common
                     sudo add-apt-repository --yes --update ppa:ansible/ansible
                     sudo apt install ansible
-#  destroy-environment:
-#    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
-#    parameters:
-#      # Add parameter here
-#    steps:
-#      - run:
-#          name: Destroy environments
-#          when: on_fail
-#          command: |
-#            # Your code here
-#            exit 1
+    destroy-environment:
+        description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+        parameters:
+          Workflow_ID:
+              type: string
+              default: ${CIRCLE_WORKFLOW_ID:0:7}
+        steps:
+          - run:
+              name: Destroy environments
+              when: on_fail
+              command: |
+                aws cloudformation delete-stack --stack-name udapeople-back-end-<< parameters.Workflow_ID >>
+                aws s3 rm s3://udapeople-<< parameters.Workflow_ID >> --recursive
+                aws cloudformation delete-stack --stack-name udapeople-front-end-<< parameters.Workflow_ID >>
+
 #
 #  revert-migrations:
 #    description: Revert the last migration if successfully run in the current workflow.
@@ -207,26 +211,25 @@ jobs:
               root: ~/
               paths:
                 - project/.circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on failure
+          - destroy-environment
 
-#  configure-infrastructure:
-#    docker:
-#      # Docker image here that supports Ansible
-#    steps:
-#      # Checkout code from git
-#      # Add ssh keys with fingerprint
-#      # attach workspace
-#      - run:
-#          name: Install dependencies
-#          command: |
-#            # Your code here
-#            exit 1
-#      - run:
-#          name: Configure server
-#          command: |
-#            # Your code here
-#            exit 1
-#      # Here's where you will add some code to rollback on failure
+  configure-infrastructure:
+    docker:
+        - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_ansible
+      - add_ssh_keys:
+            fingerprints: ["55:f9:f8:30:e3:18:c0:eb:d4:a9:e2:be:92:e0:0e:09"]
+      - attach_workspace:
+            at: ~/
+      - run:
+          name: Configure server
+          command: |
+            cd .circleci/ansible
+            cat inventory.txt
+            ansible playbook i inventory.txt configure-server.yml
+      - destroy-environment
 #
 #  run-migrations:
 #    docker:
@@ -367,8 +370,8 @@ workflows:
           filters:
             branches:
               only: [master]
-#      - configure-infrastructure:
-#          requires: [deploy-infrastructure]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
 #      - run-migrations:
 #          requires: [configure-infrastructure]
 #      - deploy-frontend:
