--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -2,7 +2,7 @@
   - name: "Add nodeJs"
     become: true
     shell: |
-        curl -sl https://deb.nodesource.com/setup_13.x | sudo -E bash
+        curl -sl https://deb.nodesource.com/setup_13.x | sudo -E bash -
         sudo apt-get install -y nodejs
 
   - name: "Install nodeJS"
