--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,17 +1,18 @@
 ---
-  - name: "Add nodeJs"
-    become: true
-    shell: |
-        curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
-
-  - name: "Install nodeJS"
-    become: true
-    apt:
-        name: ["node.js"]
-        state: latest
-        update_cache: yes
-
-  - name: "Install PM2"
+-   name: "install n"
+    become: yes
     npm:
-        name: pm2
+        name: n
         global: yes
+        production: yes
+
+-   name: "install nodejs 13.8.0"
+    become: yes
+    shell: n 13.8.0
+
+-   name: "Install PM2"
+        npm:
+            name: pm2
+            global: yes
+            production: yes
+            state: present
