--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,7 +239,8 @@ jobs:
     docker:
       - image: cimg/node:13.8.0
     steps:
-      # Checkout code from git
+      - checkout
+      - install_awscli
       - run:
           name: Run migrations
           command: |
