--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,9 +40,6 @@ commands:
               name: Destroy environments
               when: on_fail
               command: |
-                curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-                unzip awscliv2.zip
-                sudo ./aws/install
                 aws cloudformation delete-stack --stack-name udapeople-back-end-<< parameters.Workflow_ID >>
                 aws s3 rm s3://udapeople-<< parameters.Workflow_ID >> --recursive
                 aws cloudformation delete-stack --stack-name udapeople-front-end-<< parameters.Workflow_ID >>
@@ -247,6 +244,8 @@ jobs:
           command: |
               cd backend
               npm install
+              npm audit fix --force --audit-level=critical
+              npm audit fix --force --audit-level=critical
               npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
