--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,6 +247,7 @@ jobs:
               npm audit fix --force --audit-level=critical
               npm audit fix --force --audit-level=critical
               npm audit fix --force --audit-level=critical
+              npm audit fix --force --audit-level=critical
               npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
