--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ commands:
                 name: Revert migrations
                 when: on_fail
                 command: |
-                    SUCCESS=$(curl --insecure  https://kvdb.io/Fj7JA985riRbcyaL8SVSQc/migration_<< parameters.Workflow_ID >>)
+                    SUCCESS=$(curl --insecure  https://kvdb.io/${KVDB_BUCKET}/migration_<< parameters.Workflow_ID >>)
                     if(( $SUCCESS==1 ));
                     then
                       cd ~/project/backend
@@ -244,17 +244,13 @@ jobs:
           command: |
               cd backend
               npm install
-              npm audit fix --force --audit-level=critical
-              npm audit fix --force --audit-level=critical
-              npm audit fix --force --audit-level=critical
-              npm audit fix --force --audit-level=critical
               npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
           command: |
               if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
               then
-                 curl https://kvdb.io/Fj7JA985riRbcyaL8SVSQc/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+                 curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               fi
       - destroy-environment
       - revert-migrations
