--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,15 +30,16 @@ commands:
                     sudo apt-get install -y nodejs
 
     install_ansible:
-        description: Install Ansible V2
+        description: Install Ansible
         steps:
             - run:
-                name: Install Ansible cli
+                name: Install Ansible
                 command: |
                     sudo apt update
-                    sudo apt install software-properties-common
+                    sudo apt install software-properties-common -y
                     sudo add-apt-repository --yes --update ppa:ansible/ansible
-                    sudo apt install ansible
+                    sudo apt install ansible -y
+
     destroy-environment:
         description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
         parameters:
@@ -266,43 +267,75 @@ jobs:
       - destroy-environment
       - revert-migrations
 
-#  deploy-frontend:
-#    docker:
-#      # Docker image here that supports AWS CLI
-#    steps:
-#      # Checkout code from git
-#      - run:
-#          name: Install dependencies
-#          command: |
-#            # your code here
-#      - run:
-#          name: Get backend url
-#          command: |
-#            # your code here
-#            export API_URL="http://${BACKEND_IP}:3030"
-#            echo "${API_URL}"
-#      - run:
-#          name: Deploy frontend objects
-#          command: |
-#            # your code here
-#      # Here's where you will add some code to rollback on failure
-#
-#  deploy-backend:
-#    docker:
-#      # Docker image here that supports Ansible
-#    steps:
-#      # Checkout code from git
-#      # Add ssh keys with fingerprint
-#      # attach workspace
-#      - run:
-#          name: Install dependencies
-#          command: |
-#            # your code here
-#      - run:
-#          name: Deploy backend
-#          command: |
-#            # your code here
-#      # Here's where you will add some code to rollback on failure
+  deploy-frontend:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_awscli
+      - install_nodejs
+      - restore_cache:
+              keys: [frontend-build]
+      - run:
+          name: Install dependencies
+          command: |
+            cd frontend
+            npm install
+      - run:
+          name: Get backend url
+          command: |
+              BACKEND_IP=$(aws ec2 describe-instances \
+                filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+               --query "Reservations[*].Instances[*].PublicIpAddress" \
+               --output text)
+
+              echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+              cat frontend/.env
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            npm run build
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy-environment
+      - revert-migration
+
+  deploy-backend:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_awscli
+      - install_ansible
+      - install_nodejs
+      - add_ssh_keys:
+            fingerprints: ["55:f9:f8:30:e3:18:c0:eb:d4:a9:e2:be:92:e0:0e:09"]
+      - run:
+          name: Install dependencies
+          command: |
+            cd backend
+            npm install
+
+      - run:
+          name: Package backend
+          command: |
+             cd backend
+             npm run build
+             tar -czvf artifact.tar.gz dist/* package*
+
+             cd ..
+             cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
+      - run:
+          name: Deploy backend
+          command: |
+              export TYPEORM_MIGRATIONS_DIR_./src/migrations
+              export TYPEORM_ENTITIES_./src/modules/domains/**/*.entity{.ts,.js}
+              export TYPEORM_MIGRATIONS-./src/migrations/*.ts
+
+              cd .circleci/ansible
+              cat inventory.txt
+              ansible-playbook -i inventory.txt deploy-backend.yml
+      # Here's where you will add some code to rollback on failure
 #
 #  smoke-test:
 #    docker:
