--- a/backend/development.env
+++ b/backend/development.env
@@ -2,12 +2,12 @@ NODE_ENV=local
 VERSION=1
 TYPEORM_CONNECTION=postgres
 TYPEORM_MIGRATIONS_DIR=./src/migrations
-TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
+TYPEORM_ENTITIES=./src/modules/domain/**/*.entity{.ts,.js}
 TYPEORM_MIGRATIONS=./src/migrations/*.ts
 
 # Things you can change if you wish...
-TYPEORM_HOST=localhost
-TYPEORM_PORT=5532
+TYPEORM_HOST=database-1.cidqcn8t2nys.us-east-1.rds.amazonaws.com
+TYPEORM_PORT=5432
 TYPEORM_USERNAME=postgres
-TYPEORM_PASSWORD=password
+TYPEORM_PASSWORD=project3
 TYPEORM_DATABASE=glee
