--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,7 +243,7 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment
-
+      - notify_on_failure
   run-migrations:
     docker:
       - image: cimg/node:13.8.0
@@ -266,7 +266,7 @@ jobs:
               fi
       - destroy-environment
       - revert-migrations
-
+      - notify_on_failure
   deploy-frontend:
     docker:
       - image: cimg/base:stable
@@ -420,10 +420,10 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
-#      - deploy-frontend:
-#          requires: [run-migrations]
-#      - deploy-backend:
-#          requires: [run-migrations]
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
 #      - smoke-test:
 #          requires: [deploy-backend, deploy-frontend]
 #      - cloudfront-update:
