--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -417,7 +417,7 @@ workflows:
       - scan-frontend:
           requires: [build-frontend]
       -  notify_on_success:
-          requires: [run-migrations]
+          requires: [deploy-backend, deploy-backend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
