--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -5,7 +5,7 @@
      state: directory
 
  - name: "Unarchived backend files"
-   file:
+   unarchive:
      src: artifact.tar.gz
      dest: ~/backend-app
 
