--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -13,7 +13,7 @@
       - ansible_stdout_callback: yaml
 
   environment:
-      - MODE_ENV: production
+      - NODE_ENV: production
       - VERSION: 1
       - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
       - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
