--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -326,7 +326,7 @@ jobs:
           command: |
              cd backend
              npm run build
-             tar -czvf artifact.tar.gz .
+             tar -czvf artifact.tar.gz dist/* package*
 
              cd ..
              cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
