--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -17,6 +17,7 @@
       update_cache: true
 
  - name: "Execute Node app with pm2"
+   become: true
    shell: |
        cd  /home/ubuntu/backend-app/dist
        pm2 stop default
