--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -20,7 +20,7 @@
     npm:
         name: npm
         global: yes
-        state: latest
+        production: yes
 
 -   name: "Install PM2"
     become: true
