--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -11,16 +11,21 @@
 
 -   name: "install dependencies."
     become: true
-    shell: |
-        curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
-        sudo apt -y install nodejs
+    apt:
+        name: ["nodejs", "npm"]
+        state: latest
+        update_cache: yes
 
--   name: "install npm"
-    become: true
+-   name: "install n"
+    become: yes
     npm:
-        name: npm
+        name: n
         global: yes
         production: yes
+
+-   name: "install nodejs 13.8.0"
+    become: yes
+    shell: n 13.8.0
 
 -   name: "Install PM2"
     become: true
