--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -376,8 +376,8 @@ jobs:
                   else
                      return 1
                   fi
-      - destroy-environment
-      - revert-migrations
+#      - destroy-environment
+#      - revert-migrations
 
   cloudfront-update:
     docker:
