--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -1,12 +1,12 @@
 NODE_ENV=production
 VERSION=1
 TYPEORM_CONNECTION=postgres
-TYPEORM_MIGRATIONS_DIR=./migrations
-TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.js}
-TYPEORM_MIGRATIONS=./migrations/*.ts
+TYPEORM_MIGRATIONS_DIR=./src/migrations
+TYPEORM_ENTITIES=./src/modules/domain/**/*.entity{.ts,.js}
+TYPEORM_MIGRATIONS=./src/migrations/*.ts
 
 # Use these values for the local PG database from the Docker Compose file
-TYPEORM_HOST=database-1.cidqcn8t2nys.us-east-1.rds.amazonaws.com
+TYPEORM_HOST=database-2.cidqcn8t2nys.us-east-1.rds.amazonaws.com
 TYPEORM_PORT=5432
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=project3
