--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -2,7 +2,7 @@ NODE_ENV=production
 VERSION=1
 TYPEORM_CONNECTION=postgres
 TYPEORM_MIGRATIONS_DIR=./migrations
-TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.js}
+TYPEORM_ENTITIES=./src/modules/domain/**/*.entity{.ts,.js}
 TYPEORM_MIGRATIONS=./migrations/*.ts
 
 # Use these values for the local PG database from the Docker Compose file
@@ -11,3 +11,4 @@ TYPEORM_PORT=5432
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=project3
 TYPEORM_DATABASE=glee2
+
