--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -16,17 +16,15 @@
       state: latest
       update_cache: true
 
- - name: "Create .env"
-   become: true
+ - name: "execute pm2"
    shell: |
-       cd  /home/ubuntu/backend-app
-       cp .env.prod .env
-
- - name: "Execute Node app with pm2"
-   become: true
-   shell: |
-       cd  /home/ubuntu/backend-app/dist
-       pm2 start -f main.js
+       cd /home/ubuntu/backend-app/dist
+       sudo mv .env.prod .env
+       sudo npm install --force
+       sudo npm run build
+       sudo pm2 stop default
+       sudo pm2 start npm -- start
+       sudo pm2 save
 
    register: execute_node
 
