--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -17,6 +17,10 @@
       update_cache: true
 
  - name: "execute pm2"
+   remote_user: ubuntu
+   become: true
+   become_method: sudo
+   become_user: root
    shell: |
        cd /home/ubuntu/backend-app/dist
        sudo mv .env.prod .env
