--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -361,10 +361,11 @@ jobs:
                   echo "${API_URL}"
                   if curl "${API_URL}/api/status" | grep "ok"
                   then
-                      return 0
+                      exit 0
                   else
-                      return 1
+                      exit 1
                   fi
+
       - run:
             name: Frontend smoke test.
             command: |
