--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -377,8 +377,8 @@ jobs:
                   else
                      exit 1
                   fi
-#      - destroy-environment
-#      - revert-migrations
+      - destroy-environment
+      - revert-migrations
 
   cloudfront-update:
     docker:
@@ -417,9 +417,8 @@ jobs:
           - run:
               name: Get old stack workflow id
               command: |
-                  # Fetch the stack names
-                  export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-                          --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+                  export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                          --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
                   echo Stack names: "${STACKS[@]}"
                   export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflow_id
                   echo OldWorkflowID: "${OldWorkflowID}"
