--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -417,11 +417,14 @@ jobs:
           - run:
               name: Get old stack workflow id
               command: |
-                  export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-                          --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
+                  # Fetch the stack names
+                  export STACKS=($(aws cloudformation list-stacks \
+                        --query "StackSummaries[*].StackName" \
+                        --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
                   echo Stack names: "${STACKS[@]}"
-                  export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflow_id
-                  echo OldWorkflowID: "${OldWorkflowID}"
+
+                  export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflow_id)
+                  echo Old Workflow ID: $OldWorkflowID
 
           - run:
               name: Remove old stacks and files
