--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -395,7 +395,7 @@ jobs:
                       --no-paginate --output text)
                echo OldWorkflowID: "${OldWorkflowID}"
                echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-               curl https://kvdb.io/${KVDB_BUCKET}/old_workflow_id -d "${OLD_WORKFLOW_ID}"
+               curl https://kvdb.io/${KVDB_BUCKET}/old_workflow_id -d "${OldWorkflowID}"
       - run:
              name: Update cloudfront distribution
              command: |
@@ -418,17 +418,19 @@ jobs:
               name: Get old stack workflow id
               command: |
                   # Fetch the stack names
-                  export STACKS=($(aws cloudformation list-stacks \
-                        --query "StackSummaries[*].StackName" \
-                        --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-                  echo Stack names: "${STACKS[@]}"
 
-                  export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflow_id)
-                  echo Old Workflow ID: $OldWorkflowID
 
           - run:
               name: Remove old stacks and files
               command: |
+                export STACKS=($(aws cloudformation list-stacks \
+                    --query "StackSummaries[*].StackName" \
+                    --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+                echo Stack names: "${STACKS[@]}"
+
+                export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflow_id)
+                echo Old Workflow ID: $OldWorkflowID
+
                 if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
                 then
                   aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
