--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -430,12 +430,12 @@ jobs:
 
                 export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflow_id)
                 echo Old Workflow ID: $OldWorkflowID
-
+                lastSeven=${OldWorkflowID: -7}
                 if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
                 then
-                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-                  aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-                  aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+                  aws s3 rm "s3://udapeople-${lastSeven}" --recursive
+                  aws cloudformation delete-stack --stack-name "udapeople-backend-${lastSeven}"
+                  aws cloudformation delete-stack --stack-name "udapeople-frontend-${lastSeven}"
                 fi
 
 
