--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -429,8 +429,8 @@ jobs:
                 if [[ "${STACKS[@]}" =~ "${lastSeven}" ]]
                 then
                   aws s3 rm "s3://udapeople-${lastSeven}" --recursive
-                  aws cloudformation delete-stack --stack-name "udapeople-backend-${lastSeven}"
-                  aws cloudformation delete-stack --stack-name "udapeople-frontend-${lastSeven}"
+                  aws cloudformation delete-stack --stack-name "udapeople-back-end-${lastSeven}"
+                  aws cloudformation delete-stack --stack-name "udapeople-front-end-${lastSeven}"
                 fi
 
 
