--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -35,3 +35,9 @@
  - name: "Print message"
    debug:
       msg: "{{ execute_node.stdout_lines }}"
+
+ - name: "Configure pm2 to start as service"
+   bacome: true
+   shell: |
+       sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu"
+       sudo pm2 save
