--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -37,7 +37,7 @@
       msg: "{{ execute_node.stdout_lines }}"
 
  - name: "Configure pm2 to start as service"
-   bacome: true
+   become: true
    shell: |
        sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu"
        sudo pm2 save
