--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,7 +194,7 @@ jobs:
           - run:
                 name: Ensure back-end infrastructure exists
                 command: |
-                    aws cloudformation deploy \\
+                    aws cloudformation deploy \
                       --template-file .circleci/files/backend.yml \
                       --tags project=udapeople \
                       --stack-name "udapeople-back-end-${CIRCLE_WORKFLOW_ID:0:7}" \
